--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 displayPrice.innerHTML = `<span class="old-price">${originalPrice}</span> ${discountedPrice}`;
                 // Update the description for the special offer
                 offerDescription.innerHTML = `Experience premium mobile detailing with no hidden fees. One flat rate for a perfect finish, delivered right to your location.<br>
-                                            <span class="text-green-300 font-bold">This exclusive offer unlocks the $${discountedPrice} price!</span> This price includes SUVs up to 3 rows, pet hair removal, and smoke odor removal.`;
+                                            <span class="text-green-300 font-bold">This exclusive offer unlocks the ${discountedPrice} price!</span> This price includes SUVs up to 3 rows, pet hair removal, and smoke odor removal.`;
                 // Show countdown and special offer text
                 countdownContainer.classList.remove('hidden');
                 // Update "What's Included" section price
