--- a/index.html
+++ b/index.html
@@ -542,4 +542,14 @@
         });
     </script>
 </body>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782185640">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10782185640');
+</script>
 </html>
