--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-10782185640');
+
+      // gtag_report_conversion function to track clicks on phone numbers
+      // This is a standard function provided by Google for tracking phone call conversions from website clicks.
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') {
+            window.location.href = url;
+          }
+        };
+        gtag('event', 'conversion', {
+            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', // Your conversion ID
+            'event_callback': callback
+        });
+        return false; // Prevent default link action to allow callback to fire
+      }
     </script>
     <!-- Google tag (gtag.js) - END -->
 
@@ -24,7 +39,6 @@
       });
       // The gtag.js script will automatically look for and replace phone numbers
       // that have the 'goog-inline-block_fallback' class and a 'data-tel' attribute.
-      // No explicit _googWcmGet call is needed here.
     </script>
     <!-- Phone snippet - Website phone calls - END -->
 
@@ -272,11 +286,12 @@
             </h1>
         </div>
         <!-- Phone Number - Dynamically replaceable by Google for tracking -->
-        <a href="tel:+14052955189" class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center">
+        <!-- This <a> tag wraps the icon AND the number for tracking. It will get its href dynamically. -->
+        <a class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
             <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
             </svg>
-            <span class="goog-inline-block_fallback" data-tel="4052955189">(405) 295-5189</span>
+            (405) 295-5189
         </a>
     </header>
 
@@ -290,7 +305,8 @@
             <p class="text-xl md:text-3xl text-gray-200 mb-10 drop-shadow-md">
                 We bring the showroom shine to your doorstep.
             </p>
-            <a class="btn-primary goog-inline-block_fallback" data-tel="4052955189">
+            <!-- Call Button -->
+            <a class="btn-primary goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
                 <svg class="w-7 h-7 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
@@ -321,7 +337,7 @@
                 Call NOW to unlock your <span class="text-red-400 line-through">$299</span> detail for just <span class="text-yellow-400">$249!</span>
             </p>
             <!-- Small Call Button -->
-            <a class="btn-small-call goog-inline-block_fallback" data-tel="4052955189">
+            <a class="btn-small-call goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
@@ -483,7 +499,7 @@
             Our schedule fills up fast! Lock in your premium mobile detailing appointment today.
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-6">
-            <a class="btn-call-now goog-inline-block_fallback" data-tel="4052955189">
+            <a class="btn-call-now goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
                 <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
