--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       gtag('js', new Date());
       gtag('config', 'AW-10782185640');
 
-      // gtag_report_conversion function to track clicks on phone numbers
-      // This is a standard function provided by Google for tracking phone call conversions from website clicks.
+      // The gtag_report_conversion function is kept here as a general utility
+      // but it is NOT directly called by the phone number links anymore.
+      // Google's dynamic tracking handles those automatically now.
       function gtag_report_conversion(url) {
         var callback = function () {
           if (typeof(url) != 'undefined') {
@@ -286,12 +287,12 @@
             </h1>
         </div>
         <!-- Phone Number - Dynamically replaceable by Google for tracking -->
-        <!-- This <a> tag wraps the icon AND the number for tracking. It will get its href dynamically. -->
-        <a class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
+        <!-- The a tag will now be fully managed by Google's script if it has goog-inline-block_fallback and data-tel -->
+        <a href="tel:+14052955189" class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center goog-inline-block_fallback" data-tel="4052955189">
             <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
             </svg>
-            (405) 295-5189
+            <span class="goog-inline-block_fallback" data-tel="4052955189">(405) 295-5189</span>
         </a>
     </header>
 
@@ -306,7 +307,7 @@
                 We bring the showroom shine to your doorstep.
             </p>
             <!-- Call Button -->
-            <a class="btn-primary goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
+            <a href="tel:+14052955189" class="btn-primary goog-inline-block_fallback" data-tel="4052955189">
                 <svg class="w-7 h-7 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
@@ -337,7 +338,7 @@
                 Call NOW to unlock your <span class="text-red-400 line-through">$299</span> detail for just <span class="text-yellow-400">$249!</span>
             </p>
             <!-- Small Call Button -->
-            <a class="btn-small-call goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
+            <a href="tel:+14052955189" class="btn-small-call goog-inline-block_fallback" data-tel="4052955189">
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
@@ -499,7 +500,7 @@
             Our schedule fills up fast! Lock in your premium mobile detailing appointment today.
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-6">
-            <a class="btn-call-now goog-inline-block_fallback" data-tel="4052955189" onclick="return gtag_report_conversion('tel:+14052955189');">
+            <a href="tel:+14052955189" class="btn-call-now goog-inline-block_fallback" data-tel="4052955189">
                 <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
